# dotfiles

./: .Xresources  .bash_aliases  .bash_completion  .bashrc  .gitconfig  .gitignore  .profile  .stow-local-ignore  README.md
.Xresources.d/: tango-common.Xresources  tango-dark.Xresources  tango-light.Xresources
.bash_completion.d/: git  platformio
.config/Code/User/: keybindings.json  settings.json
.config/alacritty/: alacritty.yml
.config/dunst/: dunstrc
.config/mc/: ini  panels.ini
.config/nvim/: init.vim
.local/share/applications/: MATLAB-2020b.desktop  PrusaSlicer.desktop  RViz.desktop  rqt.desktop  rqt_graph.desktop  rqt_image_view.desktop  rxvt-unicode.desktop  texdoctk.desktop  update-manager.desktop
.local/share/nautilus-python/extensions/: open-terminal.py
.urxvt/ext/: vtwheel
Development/desktop/: build.sh  clone.sh  config.h
Templates/: main.cpp
Templates/ROS/: CMakeLists (Python).txt  CMakeLists (library).txt  CMakeLists (messages only).txt  CMakeLists.txt  launch file.launch  node.cpp  package (Python).xml  package (messages only).xml  package.xml  setup.py
etc/X11/xorg.conf.d/: 99-monitors.conf
etc/apt/apt.conf.d/: 99recommends-suggests
etc/docker/: daemon.json
etc/sysctl.d/: 98-idea.conf
etc/udev/rules.d/: 99-dell-tb16.rules
